{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 115,
  "lineage": "10b98a4b-1571-5808-7a26-a688db52feff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "techxcellency",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f85f3aaae282910",
            "arn": "arn:aws:ec2:us-east-2:457246485749:instance/i-09419eec1d1a3258c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tawtubiema",
            "id": "i-09419eec1d1a3258c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tawfiq",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df8ec1ab37e6fe3c",
            "private_dns": "ip-172-31-17-126.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.126",
            "public_dns": "ec2-18-216-84-39.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.84.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a05f781d063de73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "techxcellency_sg_role",
              "techxcellency_sg_role_1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fc393112fae1331",
            "tags": {
              "Environment": "Prod",
              "Name": "techxcellency-linux-1"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "techxcellency-linux-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008e1dc7af3347897",
              "sg-08a9e07419a9ff8d7"
            ]
          },
          "dependencies": [
            "aws_security_group.techxcellency_role",
            "aws_security_group.techxcellency_role_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f85f3aaae282910",
            "arn": "arn:aws:ec2:us-east-2:457246485749:instance/i-0cc982bfed2a5a1e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tawtubiema",
            "id": "i-0cc982bfed2a5a1e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tawfiq",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd8d1d2d790cf563",
            "private_dns": "ip-172-31-20-154.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.154",
            "public_dns": "ec2-3-17-150-55.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.150.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0281993b16876d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "techxcellency_sg_role",
              "techxcellency_sg_role_1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fc393112fae1331",
            "tags": {
              "Environment": "Prod",
              "Name": "techxcellency-linux-2"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "techxcellency-linux-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008e1dc7af3347897",
              "sg-08a9e07419a9ff8d7"
            ]
          },
          "dependencies": [
            "aws_security_group.techxcellency_role",
            "aws_security_group.techxcellency_role_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f85f3aaae282910",
            "arn": "arn:aws:ec2:us-east-2:457246485749:instance/i-05aea56d9549e63f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tawtubiema",
            "id": "i-05aea56d9549e63f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tawfiq",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8cdd9c177f08038",
            "private_dns": "ip-172-31-18-191.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.191",
            "public_dns": "ec2-18-217-14-94.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.14.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a32141779c764087",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "techxcellency_sg_role",
              "techxcellency_sg_role_1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fc393112fae1331",
            "tags": {
              "Environment": "Prod",
              "Name": "techxcellency-linux-3"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "techxcellency-linux-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008e1dc7af3347897",
              "sg-08a9e07419a9ff8d7"
            ]
          },
          "dependencies": [
            "aws_security_group.techxcellency_role",
            "aws_security_group.techxcellency_role_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techxcellency_role",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457246485749:security-group/sg-08a9e07419a9ff8d7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08a9e07419a9ff8d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techxcellency_sg_role",
            "name_prefix": "",
            "owner_id": "457246485749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084cca62fa9b3fc46"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techxcellency_role_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:457246485749:security-group/sg-008e1dc7af3347897",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-008e1dc7af3347897",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "techxcellency_sg_role_1",
            "name_prefix": "",
            "owner_id": "457246485749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084cca62fa9b3fc46"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}